# ntfy

./: .gitignore  Cargo.toml  Makefile  README.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  rust.yml
examples/: async-subscriber.rs  async-subscribing.rs  blocking-subscriber.rs  blocking-subscribing.rs  blocking.rs  client.rs  hello_world_alert.rs
src/: auth.rs  error.rs  lib.rs  net.rs  payload.rs  prelude.rs  priority.rs
src/auth/: mod.rs
src/dispatcher/: async.rs  auth.rs  blocking.rs  builder.rs  mod.rs
src/payload/: action.rs  mod.rs  priority.rs
src/subscriber/: async.rs  blocking.rs  builder.rs  mod.rs  request.rs
