[package]
name = "ntfy"
version = "0.8.0"
edition = "2024"
description = "Library for sending notifications over ntfy"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/shadowylab/ntfy"
repository = "https://github.com/shadowylab/ntfy.git"
license = "MIT"
readme = "README.md"
rust-version = "1.85.0"
keywords = ["ntfy", "notifications", "sdk"]

[features]
# Default features
default = ["async", "rustls"]
# Enables the async client
async = ["dep:reqwest"]
# Enables the blocking client
blocking = ["dep:ureq"]
# Enables async topic subscribing
async-subscribing = ["async", "dep:futures-util", "dep:tokio", "dep:tokio-tungstenite", "dep:tungstenite"]
# Enables blocking topic subscribing
blocking-subscribing = ["blocking", "dep:tungstenite"]
# Enables socks proxy support
socks = ["reqwest?/socks", "ureq?/socks-proxy"]
# Enables rust TLS
rustls = ["reqwest?/rustls-tls-webpki-roots", "tokio-tungstenite?/rustls", "tungstenite?/rustls", "ureq?/rustls"]
# Enables native TLS (openssl)
native-tls = ["reqwest?/native-tls", "tokio-tungstenite?/native-tls", "tungstenite?/native-tls", "ureq?/native-tls"]

[dependencies]
base64 = "0.22"
futures-util = { version = "0.3", default-features = false, optional = true }
http = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["net"], optional = true }
tokio-tungstenite = { version = "0.28", optional = true }
tungstenite = { version = "0.28", optional = true }
ureq = { version = "3.0", default-features = false, features = ["json", "gzip"], optional = true }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "blocking"
required-features = ["blocking", "socks"]

[[example]]
name = "client"
required-features = ["async", "socks"]

[[example]]
name = "blocking-subscribing"
required-features = ["blocking-subscribing"]

[[example]]
name = "async-subscribing"
required-features = ["async-subscribing"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
